# ML_Project

./: CMakeLists.txt
src/: .BowVector.cpp.swp  .BowVector.h.swp  .Database.cpp.swp  .Database.h.swo  .Database.h.swp  .DescManip.cpp.swp  .QueryResults.cpp.swp  .QueryResults.h.swp  .Vocabulary..swp  .Vocabulary.cpp.swo  .Vocabulary.cpp.swp  Database.cpp  DescManip.cpp  Vocabulary.cpp
tests/: test_flann.cpp
utils/: .2_test_demo_general.cpp.swp  .Database.h.swp  .Training.cpp.swn  .Training.cpp.swo  .Training.cpp.swp  .demo_general.cpp.swo  .demo_general.cpp.swp  1_train_demo_general.cpp  2_test_demo_general.cpp  3_test_demo_general.cpp  CMakeLists.txt  Training.cpp  demo.cpp  demo_bkp.cpp  demo_general.cpp  myImage.cpp  myImage.h  testF.cpp
